Fixed the scroll bug on mobile devices

--- a/src/NavBar/Hamburger_List.module.css
+++ b/src/NavBar/Hamburger_List.module.css
@@ -6,11 +6,11 @@
     height: 0vh;
     background-color: var(--Orange-color);
     opacity: 80%;
-    -webkit-transition: height 1s;
-    -moz-transition: height 1s;
-    -ms-transition: height 1s;
-    -o-transition: height 1s;
-    transition: height 1s;
+    -webkit-transition: height 0.5s;
+    -moz-transition: height 0.5s;
+    -ms-transition: height 0.5s;
+    -o-transition: height 0.5s;
+    transition: height 0.5s;
     overflow: hidden;
 
     position: absolute;
